# rag-chat

./: crawl.py  pyproject.toml  requirements.txt  test_retriever.py
app/: chatbot.py  config.py  main.py  prompt.py  retriever.py
data/raw/: about.md  blog.md  careers.md  categories.md  contact.md  faq.md  help-center.md  index.md  policy_payment.md  policy_returns.md  policy_shipping.md  policy_warranty.md  products.md  terms.md
db/: chroma.sqlite3
scripts/: ingest.py
