[project]
name = "ecom-beauty-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "crawl4ai>=0.9.0",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "markdown>=3.10.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "unstructured>=0.9.0",
    "uvicorn>=0.49.0",
]
